update User , Event and Registration Mappers